Changes in version 8.1, 09/09/2022
==================================

* iterator.cpp: Fix use after free in primesieve::iterator::clear().
* iterator-c.cpp: Fix use after free in primesieve_iterator_clear().
* Erat.cpp: Improve documentation.

Changes in version 8.0, 26/06/2022
==================================

There has been a minor change in the ABI (Application binary interface) of
libprimesieve-8.0 compared to libprimesieve-7.x. This ABI break was necessary
to fix undefined behavior present in libprimesieve-7.x
(in primesieve::iterator). For more information, please read:
https://github.com/kimwalisch/primesieve/wiki/libprimesieve-8.0-ABI-changes

* primesieve::iterator's ABI has been modified in both the C & C++ API.
  primesieve::iterator's API remains backwards compatible.
* CPP_API.md: Renamed doc/CPP_Examples.md to doc/CPP_API.md.
* C_API.md: Renamed doc/C_Examples.md to doc/C_API.md.
* Fix undefined behavior (g++-12 issue) caused by resizeUninitialized.hpp,
  use new pod_vector<uint64_t> from pod_vector.hpp instead.
* iterator.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* iterator-c.cpp: Enable pre-sieving for primesieve::iterator.prev_prime().
* PreSieve.cpp: Detect if the user sieves many consective intervals.
* PrimeGenerator.cpp: Improve AVX512 of fillNextPrimes().
* PrimeGenerator.cpp: Reduce memory usage for tiny stop numbers.
* PrimeGenerator.hpp: Add GCC/Clang's function multiversioning for AVX512.
* Erat.cpp: Dynamically grow the sieve size: use a small sieve size for
  small stop numbers and a large sieve size for large stop numbers.
* Erat.cpp: Reduce memory usage, allocate the minimum required
  memory to store all sieving primes.
* CpuInfo.cpp: Detect AVX512 using CPUID.
* pmath.hpp: Use compiler instrinsics for ilog2() & floorPow2().
* StorePrimes.hpp: Use vector::insert() instead of vector::push_back(),
                   see: https://github.com/kimwalisch/primesieve/issues/123.